Rewrite all 13 module analysis files based on JDK source verification
All content verified against actual /root/git/jdk source tree.

java.base.md (469 → 915 lines):
- 3,307 Java files, 55 unconditional exports from actual module-info
- Core package deep dives with real line counts and class sizes
- ScopedValue/Gatherer/Classfile API from actual @since annotations

hotspot.md (313 → 463 lines):
- Real directory listing with file counts per subsystem
- VM startup: JLI_Launch → create_vm from threads.cpp:450
- Complete thread hierarchy from source

hotspot-gc.md (324 → 485 lines):
- All 7 GC implementations with file counts (g1:257, z:237, etc.)
- CollectedHeap interface from collectedHeap.hpp:91
- BarrierSet hierarchy with compiler integration

hotspot-c2.md (425 → 670 lines):
- 158 files in opto/ directory, organized by category
- Compile::Optimize() pass order from compile.cpp:2293
- Chaitin-Briggs register allocation steps

java.net.http.md, jdk.compiler.md, java.xml.md, java.sql.md,
concurrent.md, java.crypto.md, java.logging.md, java.management.md:
All rewritten with actual source verification, file counts, and
corrected API details.

README.md: Updated to 72 source directories, all modules listed.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>